--- a/src/index.html
+++ b/src/index.html
@@ -263,7 +263,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
-        navigator.serviceWorker.register('/sw.js').then(
+        navigator.serviceWorker.register('https://alex1624.gitverse.site/260204_pwa/sw.js').then(
           function (registration) {
             // Registration was successful
             console.log('ServiceWorker registration successful with scope: ', registration.scope);
