--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,33 +18,32 @@
   <!-- Header -->
   <header>
     <div class="container">
-        <nav class="navbar">
-            <a href="#" class="logo">
-                <div class="logo-icon">
-                    <i class="fas fa-cube"></i>
-                </div>
-                <span>NeuroWeb</span>
-            </a>
+      <nav class="navbar">
+        <a href="#" class="logo">
+          <div class="logo-icon">
+            <i class="fas fa-cube"></i>
+          </div>
+          <span>NeuroWeb</span>
+        </a>
 
-            <ul class="nav-links">
-                <li><a href="#services">Услуги</a></li>
-                <li><a href="#portfolio">Портфолио</a></li>
-                <li><a href="#process">Процесс</a></li>
-                <li><a href="#contact">Контакты</a></li>
-            </ul>
+        <ul class="nav-links">
+          <li><a href="#services">Услуги</a></li>
+          <li><a href="#portfolio">Портфолио</a></li>
+          <li><a href="#process">Процесс</a></li>
+          <li><a href="#contact">Контакты</a></li>
+        </ul>
 
-            <button class="cta-button"
-                onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">
-                <i class="fas fa-paper-plane"></i>
-                Обсудить проект
-            </button>
+        <button class="cta-button" onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">
+          <i class="fas fa-paper-plane"></i>
+          Обсудить проект
+        </button>
 
-            <button class="mobile-menu-btn">
-                <i class="fas fa-bars"></i>
-            </button>
-        </nav>
+        <button class="mobile-menu-btn">
+          <i class="fas fa-bars"></i>
+        </button>
+      </nav>
     </div>
-</header>
+  </header>
   <!-- Hero Section -->
   <section class="hero">
     <div class="container">
@@ -297,59 +297,59 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-        <div class="footer-content">
-            <div class="footer-column">
-                <h3>NeuroWeb Studio</h3>
-                <p>Создаем современные веб-сайты в стиле неоморфизм, которые выделяют ваш бренд и привлекают клиентов.
-                </p>
-                <div class="social-links">
-                    <a href="#" class="social-link">
-                        <i class="fab fa-telegram"></i>
-                    </a>
-                    <a href="#" class="social-link">
-                        <i class="fab fa-whatsapp"></i>
-                    </a>
-                    <a href="#" class="social-link">
-                        <i class="fab fa-behance"></i>
-                    </a>
-                    <a href="#" class="social-link">
-                        <i class="fab fa-dribbble"></i>
-                    </a>
-                </div>
-            </div>
-
-            <div class="footer-column">
-                <h3>Услуги</h3>
-                <ul class="footer-links">
-                    <li><a href="#">Веб-разработка</a></li>
-                    <li><a href="#">UI/UX Дизайн</a></li>
-                    <li><a href="#">E-commerce</a></li>
-                    <li><a href="#">SEO оптимизация</a></li>
-                    <li><a href="#">Техническая поддержка</a></li>
-                </ul>
-            </div>
-
-            <div class="footer-column">
-                <h3>Контакты</h3>
-                <ul class="footer-links">
-                    <li><a href="mailto:hello@neuroweb.studio">hello@neuroweb.studio</a></li>
-                    <li><a href="tel:+79991234567">+7 (999) 123-45-67</a></li>
-                    <li>Москва, ул. Тверская, 10</li>
-                    <li>Работаем: Пн-Пт, 9:00-18:00</li>
-                </ul>
-            </div>
+      <div class="footer-content">
+        <div class="footer-column">
+          <h3>NeuroWeb Studio</h3>
+          <p>Создаем современные веб-сайты в стиле неоморфизм, которые выделяют ваш бренд и привлекают клиентов.
+          </p>
+          <div class="social-links">
+            <a href="#" class="social-link">
+              <i class="fab fa-telegram"></i>
+            </a>
+            <a href="#" class="social-link">
+              <i class="fab fa-whatsapp"></i>
+            </a>
+            <a href="#" class="social-link">
+              <i class="fab fa-behance"></i>
+            </a>
+            <a href="#" class="social-link">
+              <i class="fab fa-dribbble"></i>
+            </a>
+          </div>
         </div>
 
-        <div class="copyright">
-            <p>&copy; 2023 NeuroWeb Studio. Все права защищены.</p>
+        <div class="footer-column">
+          <h3>Услуги</h3>
+          <ul class="footer-links">
+            <li><a href="#">Веб-разработка</a></li>
+            <li><a href="#">UI/UX Дизайн</a></li>
+            <li><a href="#">E-commerce</a></li>
+            <li><a href="#">SEO оптимизация</a></li>
+            <li><a href="#">Техническая поддержка</a></li>
+          </ul>
         </div>
+
+        <div class="footer-column">
+          <h3>Контакты</h3>
+          <ul class="footer-links">
+            <li><a href="mailto:hello@neuroweb.studio">hello@neuroweb.studio</a></li>
+            <li><a href="tel:+79991234567">+7 (999) 123-45-67</a></li>
+            <li>Москва, ул. Тверская, 10</li>
+            <li>Работаем: Пн-Пт, 9:00-18:00</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="copyright">
+        <p>&copy; 2023 NeuroWeb Studio. Все права защищены.</p>
+      </div>
     </div>
-</footer>
+  </footer>
   <script src="js/app.min.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
-        navigator.serviceWorker.register('https://alex1624.gitverse.site/260204_pwa/sw.js').then(
+        navigator.serviceWorker.register('/sw.js').then(
           function (registration) {
             // Registration was successful
             console.log('ServiceWorker registration successful with scope: ', registration.scope);
